--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,11 +4,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: rgb(44, 52, 65)
 }
 
-html.dark {
-  background: #121212;
-}
 
 #nprogress {
   pointer-events: none;
