config setting & loading

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,19 +1,23 @@
+:root {
+  --primary: #22272e;
+  --primary-l: #2d333b;
+}
+
 html,
 body,
 #app {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: rgb(44, 52, 65)
+  background-color: var(--primary);
 }
-
 
 #nprogress {
   pointer-events: none;
 }
 
 #nprogress .bar {
-  background: rgb(13,148,136);
+  background: rgb(13, 148, 136);
   opacity: 0.75;
   position: fixed;
   z-index: 1031;
